--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-DB_CONNECT = mongodb+srv://Luis:1805Manstomy27@todoapp.hb36j.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECT =@todoapp.hb36j.mongodb.net/test?retryWrites=true&w=majority
