--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DB_CONNECT =@todoapp.hb36j.mongodb.net/test?retryWrites=true&w=majority
+DB_CONNECT  mongodb+srv://...............=@todoapp.hb36j.mongodb.net/...?retryWrites=true&w=majority
 j'ai enleve une partie du code il y avait mon mot de passe :-)
