--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-DB_CONNECT=mongodb+srv://...............=@todoapp.hb36j.mongodb.net/...?retryWrites=true&w=majority
-j'ai enleve une partie du code il y avait mon mot de passe :-)
+SESSION_SECRET=secret
+
+DB_CONNECT = "mongodb+srv://Luis:1805Manstomy27@todoapp.hb36j.mongodb.net/todolist?retryWrites=true&w=majority"
+
